--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     <h3 class="title">DevOps | CI<span class="animate scroll" style="--i:4;"></span></h3>
                     <div class="skills-content">
                         <div class="progress">
-                            <h3>Jenkins <span>30%</span></h3>
+                            <h3>GitHub Actions <span>25%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                         <div class="progress">
