--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <!-- home section design -->
     <section class="home show-animate" id="home">
         <div class="home-content">
-            <h1>Hi, I'm <span>Alejandro Munoz</span><span class="animate" style="--i:2;"></span></h1>
+            <h1>Hi, I'm <span>Alejandro</span><span class="animate" style="--i:2;"></span></h1>
             <div class="text-animate">
                 <h3>Software Developer</h3>
                 <span class="animate" style="--i:3;"></span>
             </div>
-            <p>Specializing in Full Stack Development with Python, JavaScript, HTML5, CSS, AWS | Open to Web Dev Roles & Projects
+            <p>Specializing in Full-Stack development, AWS & DevOps.
                 <span class="animate" style="--i:4;"></span>
             </p>
 
@@ -72,15 +72,11 @@
         </div>
 
         <div class="about-content">
-            <h3>Senior CS Student & Aspiring Web Developer<span class="animate scroll" style="--i:3;"></span></h3>
-            <p>I'm a senior Computer Science student at FAU, focused on becoming a Web Developer. My passion is building full-stack web applications using HTML5, CSS, JavaScript, and Python, and I'm currently diving deeper into frameworks like React and Flask. I also have hands-on experience with AWS for deploying cloud-based applications and integrating REST APIs. Alongside web development, my background in DevOps (through SRE work) helps me bring a unique perspective on building scalable and reliable applications. I'm excited to apply my skills in a team environment and continue learning as I grow.
+            <h3>Junior SDE specializing in full-stack development, AWS & DevOps. <span class="animate scroll" style="--i:3;"></span></h3>
+            <p>I’m passionate about building applications using HTML5, CSS, JavaScript, and Python, and I’m currently expanding my skills with frameworks like React, Tailwind CSS, Django and Flask. Through hands-on projects, I’ve gained experience implementing scalable applications on AWS using services like Elastic Beanstalk, DynamoDB, and CloudFront, as well as migrating workloads and automating user management with AWS Identity and Access Management.<br /><br />
+            My background in DevOps (through SRE work), along with a strong passion for troubleshooting and reliability monitoring, helps me bring a unique perspective on building scalable and reliable applications. I’m excited to apply my skills in a team environment and continue learning as I grow.
                 <span class="animate scroll" style="--i:4;"></span>
             </p>
-
-            <div class="btn-box btns">
-                <a href="#" class="btn">Read More</a>
-                <span class="animate scroll" style="--i:5;"></span>
-            </div>
         </div>
     </section>
 
